--- a/src/app/pages/error404/error404.component.html
+++ b/src/app/pages/error404/error404.component.html
@@ -1,1 +1,4 @@
-<p>error404 works!</p>
+<div class="error404">
+  <img class="background" src="assets/pictures/image.png" alt="404">
+  <button class="back" [routerLink]="['/home']" routerLinkActive="active"><p>Go home</p></button>
+</div>
